--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div class="col-sm-12 col-md-12 col-lg-6 container-md p-1">
                             <div class="p-4 rounded d-flex align-items-center skill">
                                 <h4> php  &nbsp;</h4>
-                                <img src="./php_PNG26 (2).png.crdownload" class="skill-img">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/800px-PHP-logo.svg.png">
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-6 col-lg-6 container-md p-1">
