--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
                       <br>
                   </br>
                     <p>  
-                        سلام عليكم يسعدني ان اتحدث معكم عني نفسي  
+                        سلام عليكم يسعدني ان اتحدث معكم عن نفسي  
                         <br></br>
 من اكون ؟ انا اسمي محمد اسامه محمد احمد عبدالفتاح من قريه تسمي كوم حلين بمركز منيا القمح بمحافظه الشرقيه في مصر 
-       <br> </br>  انا من مواليد 2003 امتلك 19 سنه متعلم لغات برمجه امتلك حوالي عام من الخبره في هذا المجال دعوني اتكلم عن تلك اللغه  وهي 
+       <br> </br>  انا من مواليد 2003  انا  امتلك من العمر 19 سنه متعلم لغات برمجه  لديا ما يقرب عام من الخبره في هذا المجال دعوني اتكلم عن تلك اللغات التي تعلمتها  وهي 
        <br> </br> <strong>Frontend { html / css / java  } </strong>
        <br> </br> <strong> back end { php / python / sql / my sql / c# / c++} </strong>
        <br></br> <strong>
            full stuk{ front end / back end }
        </strong>
-       <br> </br>  واخيرا افضل التعليم المجانيه من اليوتيوب ومنصات المجنيه 
+       <br> </br>  واخيرا افضل التعليم المجاني من اليوتيوب والمنصات المجانيه 
 </div> </div>
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-6 container-md p-1">
