--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                     <p>  
                         سلام عليكم يسعدني ان اتحدث معكم عن نفسي  
                         <br></br>
-من اكون ؟ انا اسمي محمد اسامه محمد احمد عبدالفتاح من قريه تسمي كوم حلين بمركز منيا القمح بمحافظه الشرقيه في مصر 
-       <br> </br>  انا من مواليد 2003  انا  امتلك من العمر 19 سنه متعلم لغات برمجه  لديا ما يقرب عام من الخبره في هذا المجال دعوني اتكلم عن تلك اللغات التي تعلمتها  وهي 
+من اكون ؟ انا اسمي محمد اسامه محمد احمد عبدالفتاح من منيا القمح بمحافظه الشرقيه في مصر 
+       <br> </br>  انا من مواليد 2003  انا  امتلك من العمر 19 سنه متعلم لغات برمجه  لديا ما يقرب عام من الخبره في هذا المجال دعوني اتكلم عن  اللغات التي تعلمتها  وهي 
        <br> </br> <strong>Frontend { html / css / java  } </strong>
        <br> </br> <strong> back end { php / python / sql / my sql / c# / c++} </strong>
        <br></br> <strong>
